# dna-rights

./: .env.example  .gitignore  CLAUDE.md  GOAL.md  INTENT.md  README.md  pyproject.toml
.control/: repo.yaml
data/: terms.yaml
docs/: alienation_as_rights_violation.md  dna_as_claim.md  force_performance.md  international_frameworks.md  land_connection.md  natural_rights_framework.md  offspring_vs_children.md
src/dna_rights/: cli.py
