[project]
name = "dna-rights"
version = "0.1.0"
description = "Natural rights assertion toolkit — biological parentage as jurisdictional fact"
requires-python = ">=3.12"
dependencies = ["click>=8.1", "pyyaml>=6.0", "rich>=13.0", "anthropic>=0.40"]

[project.scripts]
rights = "dna_rights.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dna_rights"]
